Kubernetes/Ingress/Tools/Ingress/ingress-certification.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cert
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jala.net.in
    secretName: route53-secret
  rules:
  - host: jala.net.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-backend-service
            port:
              number: 80
